changed models and routes
